@@ -1,5 +1,4 @@
 /* changes from setting SQL_MODE = STRICT_TRANS_TABLES*/
-ALTER TABLE `run` CHANGE `id_run_pair` `id_run_pair` bigint(20) unsigned NOT NULL DEFAULT 0;
 
 ALTER TABLE `annotation` CHANGE `id_user` `id_user` bigint(20) unsigned NOT NULL;
 ALTER TABLE `event` CHANGE `id_user` `id_user` bigint(20) unsigned NOT NULL;
