@@ -1,7 +1,9 @@
 CHANGES
 
-- Remove id_run_pair from template creating the view. In the run table, make the default 0 and the field not null
-  In model, initialise id_run_pair to 0.
+- Explicitly set batch_id to 0 in the run model create for case where no batch id is set (nullable in database with default 0 not apparently honoured)
+- Explicitly remove expected_cycle_count from run model create.
+- Remove configure run pairing from run model create.
+- Remove id_run_pair from template creating the view. 
 - Make id_user NOT NULL with no default
 
 release 75.6
